# Data-Science-Project

./: Untitled.ipynb  pyproject.toml
data_science_project/: .env  .env_API  .env_flight  .gitignore  01_API_flight_ticket.ipynb  01_API_hotel_prices.ipynb  02_Scraping_flight_tickets.ipynb  Amadeus.ipynb  Flight data API.ipynb  Football_scraping.ipynb  Football_scraping_possession.ipynb  Football_scraping_shooting.ipynb  Waste_classification.ipynb  flight_data_BLL_MLA.csv  matches_shooting.csv  raw.csv
data_science_project/.ipynb_checkpoints/: 01_API_flight_ticket-checkpoint.ipynb  01_API_hotel_prices-checkpoint.ipynb  02_Scraping_flight_tickets-checkpoint.ipynb  Football_scraping-checkpoint.ipynb  flight_data_BLL_NCE-checkpoint.csv  flight_data_BLL_PMI-checkpoint.csv  matches_shooting-checkpoint.csv
data_science_project/Beat the bookies/: Boosting.ipynb  Deep_learning.ipynb  EDA.ipynb  Feature engineering.ipynb  Football_scraping_possession.ipynb  LaLiga prediction.ipynb  MLR.ipynb  Random Forest.ipynb  Untitled.ipynb  df_final.csv  df_prepro_2.csv  elo_rating.ipynb  five_thirty_eight.ipynb  team_elo.csv  test.csv
data_science_project/Flight/: 02_Scraping_flight_tickets.ipynb  flight_data_BLL_AGP.csv  flight_data_BLL_BCN.csv  flight_data_BLL_OPO.csv  flight_data_BLL_ROM.csv
detect_ai_human/: celeba_low_1000.pkl  load_data.ipynb  radialProfile.py  test.ipynb
financial_trader/: pyproject.toml
financial_trader/financial_trader/: test.ipynb
gpt2_from_scratch/: train_gpt.py
mlruns/0/: meta.yaml
n1_cand_merc/: pyproject.toml
summer_exam_2024/: exam2024.ipynb
(+139 files in other folders)
