[tool.poetry]
name = "financial-trader"
version = "0.1.0"
description = ""
authors = ["hellum55 <hellum.christian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
jupyter = "^1.1.1"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
