[tool.poetry]
name = "financial-trader"
version = "0.1.0"
description = ""
authors = ["hellum55 <hellum.christian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
